# IU5-Internship-matrix-parallel-sum

./: .gitignore  CMakeLists.txt  README.md
client/: App.hpp  CMakeLists.txt  main.cpp
lib/: boost lib
matrix/: Matrix.hpp
server/: App.hpp  CMakeLists.txt  HttpServer.hpp  Socket.hpp
server/matrix_calculation_handler/: MatrixCalculationHandler.cpp  MatrixCalculationHandler.hpp
server/thread_manager/: ThreadManager.cpp  ThreadManager.hpp
utils/: Vec.hpp
